--- a/projekty/projekt3/WindowsFormsApplication1/WindowsFormsApplication1/Properties/Settings.settings
+++ b/projekty/projekt3/WindowsFormsApplication1/WindowsFormsApplication1/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=eos.inf.ug.edu.pl;Initial Catalog=dsienkiewicz;Persist Security Info=True;User ID=dsienkiewicz;Password=206358</Value>
     </Setting>
+    <Setting Name="ConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=eos.inf.ug.edu.pl;User ID=dsienkiewicz;Password=206358&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=eos.inf.ug.edu.pl;User ID=dsienkiewicz;Password=206358</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
